install (FILES 64x64/corebird.png       DESTINATION ${PREFIX}/share/icons/hicolor/64x64/apps/)
install (FILES 128x128/corebird.png     DESTINATION ${PREFIX}/share/icons/hicolor/128x128/apps/)
install (FILES 512x512/corebird.png     DESTINATION ${PREFIX}/share/icons/hicolor/512x512/apps/)
install (FILES no_avatar.png            DESTINATION ${DATADIR})
install (FILES no_banner.png            DESTINATION ${DATADIR})
install (FILES favorite.png             DESTINATION ${DATADIR})
install (FILES favorite-normal.png      DESTINATION ${DATADIR})
install (FILES retweet.png              DESTINATION ${DATADIR})
install (FILES retweet-normal.png       DESTINATION ${DATADIR})
install (FILES conversation.png         DESTINATION ${DATADIR})
install (FILES conversation-normal.png  DESTINATION ${DATADIR})
install (FILES more-normal.png          DESTINATION ${DATADIR})
install (FILES more.png                 DESTINATION ${DATADIR})
install (FILES verified.png             DESTINATION ${DATADIR})
install (FILES icons/mentions.svg       DESTINATION ${DATADIR})
install (FILES icons/stream.svg         DESTINATION ${DATADIR})
install (FILES icons/search.svg         DESTINATION ${DATADIR})
install (FILES icons/follower.png       DESTINATION ${DATADIR})
install (FILES icons/dms.svg            DESTINATION ${DATADIR})
