install (FILES 64x64/corebird.png                       DESTINATION ${PREFIX}/share/icons/hicolor/64x64/apps/)
install (FILES 128x128/corebird.png                     DESTINATION ${PREFIX}/share/icons/hicolor/128x128/apps/)
install (FILES 512x512/corebird.png                     DESTINATION ${PREFIX}/share/icons/hicolor/512x512/apps/)
install (FILES no_avatar.png                            DESTINATION ${DATADIR})
install (FILES no_banner.png                            DESTINATION ${DATADIR})
install (FILES verified.png                             DESTINATION ${DATADIR})
install (FILES icons/corebird-mentions-symbolic.svg     DESTINATION ${DATADIR}/scalable/)
install (FILES icons/corebird-stream-symbolic.svg       DESTINATION ${DATADIR}/scalable/)
install (FILES icons/corebird-search-symbolic.svg       DESTINATION ${DATADIR}/scalable/)
install (FILES icons/corebird-dms-symbolic.svg          DESTINATION ${DATADIR}/scalable/)
install (FILES icons/corebird-retweet-symbolic.svg      DESTINATION ${DATADIR}/scalable/)
install (FILES icons/corebird-conversation-symbolic.svg DESTINATION ${DATADIR}/scalable/)
install (FILES icons/corebird-favorite-symbolic.svg     DESTINATION ${DATADIR}/scalable/)
install (FILES icons/corebird-filter-symbolic.svg       DESTINATION ${DATADIR}/scalable/)
install (FILES icons/corebird-location-symbolic.svg     DESTINATION ${DATADIR}/scalable/)
install (FILES icons/corebird-down-symbolic.svg         DESTINATION ${DATADIR}/scalable/)
install (FILES icons/corebird-reply-symbolic.svg        DESTINATION ${DATADIR}/scalable/)
install (FILES icons/corebird-lists-symbolic.svg        DESTINATION ${DATADIR}/scalable/)
install (FILES icons/corebird-filter-symbolic.svg       DESTINATION ${DATADIR}/scalable/)
